--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
   <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
-    window.digitalData = {"page":"index"};
+    window.digitalData = {"page":"index","products":[{"image":"p1.png","color":"gray","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Classic No Tuck Dress Shirt","price":49.5,"rating":4,"url":"products/001.html","id":"4001"},{"image":"p2.png","color":"black","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Multistack Everyday Shirt","price":65,"rating":3,"url":"products/002.html","id":"4002"},{"image":"p3.png","color":"violet","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"A-Line Strapless Chiffon Floor-Length Dress","price":109.99,"rating":5,"url":"products/003.html","id":"4003"},{"image":"p4.png","color":"red","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"sleeveless","cat3Name":"Sleeveless","name":"Sweetheart Sleeveless Short Tulle Homecoming Dress","price":99,"rating":4,"url":"products/004.html","id":"4004"}]};
   </script>
   <script>
     // Modified Web SDK prehiding snippet to work for both target and web sdk. (Assuming only one is active at a time.)
@@ -109,7 +109,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/product.html">Products</a>
+                <a class="nav-link" href="/categories/all.html">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/blog_list.html">Blog</a>
@@ -209,11 +209,6 @@
                       <br>
                       On Everything
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta
-                      aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis
-                      delectus repellat modi impedit sequi.
-                    </p>
                     <div class="btn-box">
                       <a href="/categories/all.html" class="btn1">
                         Shop Now
@@ -235,162 +230,118 @@
   <section class="product_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-          Our <span>products</span>
-        </h2>
+        <h3>
+          Our products
+        </h3>
       </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Men's Shirt
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
+      
+      <section class="product_section layout_padding">
+        <div class="container">
+          <div class="heading_container heading_center">
+            <h2></h2>
+          </div>
+      
+          <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="box">
+                <div class="option_container">
+                  <div class="options">
+                    <button class="addToCart" data-product-index="0">
+                      Add to Cart
+                    </button>
+                  </div>
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    Classic No Tuck Dress Shirt
+                  </h6>
+                </div>
+                <div class="img-box">
+                  <img src="/images/p1.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    $49.5
+                  </h6>
+                </div>
               </div>
             </div>
-            <div class="img-box">
-              <img src="images/p1.png" loading="lazy" alt="">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="box">
+                <div class="option_container">
+                  <div class="options">
+                    <button class="addToCart" data-product-index="1">
+                      Add to Cart
+                    </button>
+                  </div>
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    Multistack Everyday Shirt
+                  </h6>
+                </div>
+                <div class="img-box">
+                  <img src="/images/p2.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    $65
+                  </h6>
+                </div>
+              </div>
             </div>
-            <div class="detail-box">
-              <h5>
-                Men's Shirt
-              </h5>
-              <h6>
-                $75
-              </h6>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="box">
+                <div class="option_container">
+                  <div class="options">
+                    <button class="addToCart" data-product-index="2">
+                      Add to Cart
+                    </button>
+                  </div>
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    A-Line Strapless Chiffon Floor-Length Dress
+                  </h6>
+                </div>
+                <div class="img-box">
+                  <img src="/images/p3.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    $109.99
+                  </h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="box">
+                <div class="option_container">
+                  <div class="options">
+                    <button class="addToCart" data-product-index="3">
+                      Add to Cart
+                    </button>
+                  </div>
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    Sweetheart Sleeveless Short Tulle Homecoming Dress
+                  </h6>
+                </div>
+                <div class="img-box">
+                  <img src="/images/p4.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h6>
+                    $99
+                  </h6>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p2.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Men's Shirt
-              </h5>
-              <h6>
-                $80
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p3.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $68
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p4.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $70
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p5.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $75
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p6.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $58
-              </h6>
-            </div>
-          </div>
-        </div>
-      </div>
+      </section>
+
       <div class="btn-box">
         <a href="/categories/all.html">
           View All products
@@ -410,7 +361,6 @@
               <div class="heading_container heading_center">
                 <h3>Subscribe To Get Discount Offers</h3>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
               <form action="">
                 <input type="email" placeholder="Enter your email">
                 <button>
@@ -451,11 +401,6 @@
                 <h6>
                   Customer
                 </h6>
-                <p>
-                  Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit,
-                  et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus
-                  accusantium sapiente nam! Quaerat.
-                </p>
               </div>
             </div>
           </div>
