--- a/public/product.html
+++ b/public/product.html
@@ -108,7 +108,7 @@
                 </ul>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/product.html">Products</a>
+                <a class="nav-link" href="/categories/all.html">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/blog_list.html">Blog</a>
