--- a/public/products/011.html
+++ b/public/products/011.html
@@ -108,7 +108,7 @@
                 </ul>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/product.html">Products</a>
+                <a class="nav-link" href="/categories/all.html">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/blog_list.html">Blog</a>
@@ -215,9 +215,9 @@
           <div class="box">
             <div class="option_container">
               <div class="options">
-                <a href="#" class="addToCart" data-product-index="0">
+                <button class="addToCart" data-product-index="0">
                   Add to Cart
-                </a>
+                </button>
               </div>
             </div>
             <div class="detail-box">
