--- a/public/success.html
+++ b/public/success.html
@@ -26,7 +26,7 @@
   <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
   <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
-    window.digitalData = {"page":"success"};
+    window.digitalData = {"page":"success","products":[{"image":"p1.png","color":"gray","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Classic No Tuck Dress Shirt","price":49.5,"rating":4,"url":"products/001.html","id":"4001"},{"image":"p2.png","color":"black","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Multistack Everyday Shirt","price":65,"rating":3,"url":"products/002.html","id":"4002"},{"image":"p3.png","color":"violet","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"A-Line Strapless Chiffon Floor-Length Dress","price":109.99,"rating":5,"url":"products/003.html","id":"4003"},{"image":"p4.png","color":"red","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"sleeveless","cat3Name":"Sleeveless","name":"Sweetheart Sleeveless Short Tulle Homecoming Dress","price":99,"rating":4,"url":"products/004.html","id":"4004"}]};
   </script>
   <script>
     // Modified Web SDK prehiding snippet to work for both target and web sdk. (Assuming only one is active at a time.)
@@ -108,7 +108,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/product.html">Products</a>
+                <a class="nav-link" href="/categories/all.html">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/blog_list.html">Blog</a>
